--- a/pharmacy_site/products/templates/index.html
+++ b/pharmacy_site/products/templates/index.html
@@ -170,7 +170,7 @@
                                                 <li><a href="shop.html">shop</a></li>
                                                 <li><a href="shop-sidebar.html">shop sidebar</a></li>
                                                 <li><a href="product-details-sticky-right.html">product details</a></li>
-                                                <li><a href="cart.html">cart</a></li>
+                                                <li><a href="{% url "cart" %}">cart</a></li>
                                                 <li><a href="wishlist.html">wishlist</a></li>
                                                 <li><a href="checkout.html">checkout</a></li>
                                                 <li><a href="team.html">team</a></li>
